2005-01-08  Sebastien Pouliot  <sebastien@ximian.com>

	* AppDomain.cs: Add ApplicationIdentity property for 2.0;
	* AppDomainManager.cs: Remove HostRefusedSet support (it does not 
	exists anymore).

2005-01-08  Zoltan Varga  <vargaz@freemail.hu>

	* DateTime.cs: Create MaxValue and MinValue using a different constructor to avoid static 
	initialization problems.

2005-01-02  Ben Maurer  <bmaurer@ximian.com>

	* Int32.cs: NumberStyles.AllowExponent was supported by the
	Int32.Parse function. From Akira <mei@work.email.ne.jp>. Fixes bug
	70469.

2005-01-01  Atsushi Enomoto  <atsushi@ximian.com>

	* Base64FormattingOptions.cs : it was not in System namespace.

2004-12-21  Atsushi Enomoto  <atsushi@ximian.com>

	* DateTime.cs : If no progress on value string, don't regard as
	  matched. This fixes bug #70707.

2004-12-20  Sebastien Pouliot  <sebastien@ximian.com>

	* Environment.cs: Bump corlib version.

2004-12-16  Zoltan Varga  <vargaz@freemail.hu>

	* Array.cs (DoBinarySearch): Fix a warning.

2004-12-08  Zoltan Varga  <vargaz@freemail.hu>

	* Environment.cs: Bump corlib version.

	* AppDomain.cs: Add new DefineInternalDynamicAssembly () method.

2004-12-06  Ben Maurer  <bmaurer@ximian.com>

	* Exception.cs: Prevent stringifying the type name on the
	ctor. this gets called a few times on every execution to create a
	nullref exception.

2004-12-06  Martin Baulig  <martin@ximian.com>

	* Decimal.cs: Decimal constant support has been merged into GMCS,
	removed the FIXME.

2004-12-06  Zoltan Varga  <vargaz@freemail.hu>

	* Environment.cs: Bump corlib version.
	
	* Environment.cs: Bump corlib version.

2004-11-30  Zoltan Varga  <vargaz@freemail.hu>

	* MonoType.cs (UnderlyingSystemType): Make this return this as in
	MS.NET. Fixes #56245.

2004-11-29  Atsushi Enomoto  <atsushi@ximian.com>

	* GC.cs : Collect(generation) actually does not throw an exception
	  even if generation > MaxGeneration (MS document bug).

2004-11-28  Zoltan Varga  <vargaz@freemail.hu>
