@@ -2806,7 +2806,7 @@ namespace System {
 				else if (conversionType == conversionTable[18]) // 18 TypeCode.String
 					return (object) convertValue.ToString (provider);
 				else {
-					throw new ArgumentException (Locale.GetText ("Unknown target conversion type"));
+					throw new InvalidCastException (Locale.GetText ("Unknown target conversion type"));
 				}
 			} else
 				// Not in the conversion table
